--- a/helm-charts/istio-discovery/Chart.yaml
+++ b/helm-charts/istio-discovery/Chart.yaml
@@ -1,15 +1,16 @@
 apiVersion: v1
-name: istio-operator
+name: istiod
 # This version is never actually shipped. istio/release-builder will replace it at build-time
 # with the appropriate version
 version: 1.0.0
 appVersion: 1.0.0
 tillerVersion: ">=2.7.2"
-description: Helm chart for deploying Istio operator
+description: Helm chart for istio control plane
 keywords:
   - istio
-  - operator
+  - istiod
+  - istio-discovery
 sources:
-  - https://github.com/istio/istio/tree/master/operator
+  - http://github.com/istio/istio
 engine: gotpl
 icon: https://istio.io/latest/favicons/android-192x192.png
