istio init secret

--- a/helm-charts/mc-init/templates/certs-secret.yaml
+++ b/helm-charts/mc-init/templates/certs-secret.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cacerts
+  annotations:
+    avp.kubernetes.io/path: paas2/k8s/{{ .Values.cert-path }}/certs
 type: Opaque
-data:
-  webhook.github.secret: {{ .Values.configs.secret.githubSecret | b64enc }}
-  webhook.gitlab.secret: {{ .Values.configs.secret.gitlabSecret | b64enc }}
-  webhook.bitbucketserver.secret: {{ .Values.configs.secret.bitbucketServerSecret | b64enc }}
-  webhook.bitbucket.uuid: {{ .Values.configs.secret.bitbucketUUID | b64enc }}
-  webhook.gogs.secret: {{ .Values.configs.secret.gogsSecret | b64enc }}
+stringData:
+  ca-cert.pem: |
+    <ca-cert.pem | jsonPath {.pem}>
