--- a/helm-charts/mc-init/values.yaml
+++ b/helm-charts/mc-init/values.yaml
@@ -1,12 +1,1 @@
-# meshID: default
-# multiCluster:
-#   clusterName: default
-# network: default
-
-# resources: 
-#   limits:
-#     cpu: 100m
-#     memory: 256Mi
-#   requests:
-#     cpu: 100m
-#     memory: 256Mi
+cert-path: bwb-dev
