bwb dev values file added

--- a/helm-charts/mc-init/templates/certs-secret.yaml
+++ b/helm-charts/mc-init/templates/certs-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cacerts
   annotations:
-    avp.kubernetes.io/path: paas2/k8s/{{ .Values.cert-path }}/certs
+    avp.kubernetes.io/path: paas2/k8s/{{ .Values.certPath }}/certs
 type: Opaque
 stringData:
   ca-cert.pem: |
