vault plugin helm to k8s yaml

--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cacerts
   annotations:
-    avp.kubernetes.io/path: paas2/k8s/{{ .Values.certPath }}/certs
+    avp.kubernetes.io/path: paas2/k8s/bwb-dev/certs
 type: Opaque
 stringData:
   ca-cert.pem: |
