--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cacerts
   annotations:
-    avp.kubernetes.io/path: "secret/data/paas2/k8s/bwb-dev/certs"
+    avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
 type: Opaque
 stringData:
   ca-cert.pem: |
