--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -3,8 +3,11 @@ kind: Secret
 metadata:
   name: cacerts
   annotations:
-    avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
+    # avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
+    avp.kubernetes.io/path: "path/to/secret"
 type: Opaque
 stringData:
-  ca-cert.pem: |
-    <ca-cert.pem | jsonPath {.pem}>
+  password: <paas2/k8s/bwb-dev/certs/ca-cert.pem>
+# stringData:
+#   ca-cert.pem: |
+#     <ca-cert.pem | jsonPath {.pem}>
