--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -4,10 +4,10 @@ metadata:
   name: cacerts
   annotations:
     # avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
-    avp.kubernetes.io/path: "paas2/k8s/bwb-dev"
+    avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs"
 type: Opaque
 stringData:
   # password: <pem>
 stringData:
   ca-cert.pem: |
-    <certs/ca-cert.pem | jsonPath {.pem}>
+    <ca-cert.pem | jsonPath {.pem}>
