--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cacerts
   annotations:
     # avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
-    avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/"
+    avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
 type: Opaque
 stringData:
   # password: <pem>
