--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -4,10 +4,9 @@ metadata:
   name: cacerts
   annotations:
     # avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
-    avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
+    avp.kubernetes.io/path: "paas2/k8s/bwb-dev"
 type: Opaque
 stringData:
-  # password: <pem>
 stringData:
   ca-cert.pem: |
     <pem | jsonPath {.pem}>
