--- a/mc-init/secret.yaml
+++ b/mc-init/secret.yaml
@@ -3,10 +3,8 @@ kind: Secret
 metadata:
   name: cacerts
   annotations:
-    # avp.kubernetes.io/path: "paas2/k8s/bwb-dev/certs/ca-cert.pem"
-    avp.kubernetes.io/path: "paas2/k8s/bwb-dev"
+    avp.kubernetes.io/path: "avp/data/bwb-dev"
+    # avp.kubernetes.io/kv-version: 2
 type: Opaque
-stringData:
-stringData:
-  ca-cert.pem: |
-    <pem | jsonPath {.pem}>
+data:
+  ca-cert.pem: <ca-cert>
