--- a/helm-charts/istio-cacerts/Chart.yaml
+++ b/helm-charts/istio-cacerts/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: istio-cacert
+name: istio-cacerts
 description: A Helm chart for Kubernetes
 type: application
 version: 1.0.0
