remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -14,16 +14,18 @@ stringData:
     preferences: {}
     clusters:
     - cluster:
-        certificate-authority-data: <omitted>
-        server: https://east-clust-dkjqiu.hcp.eastus.azmk8s.io:443
+        certificate-authority-data: <sahap2-kv/data/shared/{{.Values.global.clusterName }}-{{ .Values.global.env}}/certificate-authority-data>
+        server: <sahap2-kv/data/shared/{{.Values.global.clusterName }}-{{ .Values.global.env}}/server>
       name: security-cluster
     users:
     - name: security-cluster
       user:
-        token: <omitted>
+        token: <sahap2-kv/data/shared/{{.Values.global.clusterName }}-{{ .Values.global.env}}/sa-token>
     contexts:
     - context:
         cluster: security-cluster
         user: security-cluster
       name: security-cluster
     current-context: security-cluster
+
+ sahap2-kv/data/{{ .Values.certsPath }}/cacerts    
