remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
   annotations:
     networking.istio.io/cluster: security
+    avp.kubernetes.io/path: sahap2-kv/data/shared/{.Values.global.clusterName }}-{{ .Values.global.env}}    
   labels:
     istio/multiCluster: "true"
   name: istio-remote-secret-security-cluster
@@ -14,13 +15,13 @@ stringData:
     preferences: {}
     clusters:
     - cluster:
-        certificate-authority-data: <sahap2-kv/data/shared/{{.Values.global.clusterName }}-{{ .Values.global.env}}/certificate-authority-data>
-        server: <sahap2-kv/data/shared/{{.Values.global.clusterName }}-{{ .Values.global.env}}/server>
+        certificate-authority-data: <certificate-authority-data>
+        server: <server>
       name: security-cluster
     users:
     - name: security-cluster
       user:
-        token: <sahap2-kv/data/shared/{{.Values.global.clusterName }}-{{ .Values.global.env}}/sa-token>
+        token: <sa-token>
     contexts:
     - context:
         cluster: security-cluster
