remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -8,23 +8,25 @@ metadata:
     istio/multiCluster: "true"
   name: istio-remote-secret-security-cluster
   namespace: istio-system
+type: Opaque  
 stringData:
-  east-cluster: |
-    apiVersion: v1
-    kind: Config
-    preferences: {}
-    clusters:
-    - cluster:
-        certificate-authority-data: <certificate-authority-data>
-        server: <server>
-      name: security-cluster
-    users:
-    - name: security-cluster
-      user:
-        token: <sa-token>
-    contexts:
-    - context:
-        cluster: security-cluster
-        user: security-cluster
-      name: security-cluster
-    current-context: security-cluster
+  certificate-authority-data: <certificate-authority-data>
+  # east-cluster: |
+  #   apiVersion: v1
+  #   kind: Config
+  #   preferences: {}
+  #   clusters:
+  #   - cluster:
+  #       certificate-authority-data: <certificate-authority-data>
+  #       server: <server>
+  #     name: security-cluster
+  #   users:
+  #   - name: security-cluster
+  #     user:
+  #       token: <sa-token>
+  #   contexts:
+  #   - context:
+  #       cluster: security-cluster
+  #       user: security-cluster
+  #     name: security-cluster
+  #   current-context: security-cluster
