remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  name: istio-remote-secret-security-cluster
   annotations:
     networking.istio.io/cluster: security
-    avp.kubernetes.io/path: sahap2-kv/data/shared/{.Values.global.clusterName }}-{{ .Values.global.env}}    
+    avp.kubernetes.io/path: sahap2-kv/data/shared/{{ .Values.global.clusterName }}-{{ .Values.global.env}}    
   labels:
     istio/multiCluster: "true"
-  name: istio-remote-secret-security-cluster
-  namespace: istio-system
 type: Opaque  
 stringData:
   certificate-authority-data: <certificate-authority-data>
