--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     istio/multiCluster: "true"
 type: Opaque  
-stringData:
+data:
   certificate-authority-data: <certificate-authority-data>
   # east-cluster: |
   #   apiVersion: v1
