remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -8,8 +8,8 @@ metadata:
   labels:
     istio/multiCluster: "true"
 type: Opaque  
-stringData:
-  certificate-authority-data: <certificate-authority-data>
+data:
+  server: <server>
   # east-cluster: |
   #   apiVersion: v1
   #   kind: Config
