remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -4,13 +4,13 @@ metadata:
   name: istio-remote-secret-security-cluster
   annotations:
     networking.istio.io/cluster: security
-    avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts
-    # avp.kubernetes.io/path: sahap2-kv/data/shared/{{ .Values.global.clusterName }}-{{ .Values.global.env}}    
+    # avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts
+    avp.kubernetes.io/path: sahap2-kv/data/shared/bwb-dev    
   labels:
     istio/multiCluster: "true"
 type: Opaque  
 stringData:
-  ca-cert.pem: <ca-cert>
+  token: <sa-token>
   # east-cluster: |
   #   apiVersion: v1
   #   kind: Config
