remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -3,14 +3,14 @@ kind: Secret
 metadata:
   name: istio-remote-secret-security-cluster
   annotations:
+    avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts  
     networking.istio.io/cluster: security
-    # avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts
-    avp.kubernetes.io/path: sahap2-kv/data/shared/bwb-dev    
+    # avp.kubernetes.io/path: sahap2-kv/data/shared/bwb-dev    
   labels:
     istio/multiCluster: "true"
 type: Opaque  
 stringData:
-  token: <sa-token>
+  ca: <ca-cert>
   # east-cluster: |
   #   apiVersion: v1
   #   kind: Config
