remote secret added

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: istio-remote-secret-security-cluster
   annotations:
-    avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts  
+    avp.kubernetes.io/path: sahap2-kv/data/bwb-dev/cacerts  
     networking.istio.io/cluster: security
     # avp.kubernetes.io/path: sahap2-kv/data/shared/bwb-dev    
   labels:
