--- a/helm-charts/istio-cacerts/templates/secret.yaml
+++ b/helm-charts/istio-cacerts/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cacerts
+  name: cacerts-delete
   annotations:
     avp.kubernetes.io/path: sahap2-kv/data/bwb-dev/cacerts
     # avp.kubernetes.io/kv-version: 2
