remote secret added

--- a/helm-charts/istio-cacerts/templates/secret.yaml
+++ b/helm-charts/istio-cacerts/templates/secret.yaml
@@ -6,6 +6,7 @@ metadata:
     avp.kubernetes.io/path: sahap2-kv/data/bwb-dev/cacerts
     # avp.kubernetes.io/kv-version: 2
 type: Opaque
+stringData:
   east-cluster: |
     apiVersion: v1
     kind: Config
