--- a/helm-charts/clusters/bwb/templates/secret.yaml
+++ b/helm-charts/clusters/bwb/templates/secret.yaml
@@ -1,13 +1,26 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cacerts
+  name: cacerts-delete
   annotations:
-    avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts
+    avp.kubernetes.io/path: sahap2-kv/data/bwb-dev/cacerts
     # avp.kubernetes.io/kv-version: 2
 type: Opaque
-data:
-  ca-cert.pem: <ca-cert>
-  ca-key.pem: <ca-key>  
-  cert-chain.pem: <cert-chain>
-  root-cert.pem: <root-cert>      
+stringData:
+  east-cluster: |
+    apiVersion: v1
+    kind: Config
+    preferences: {}
+    clusters:
+    - cluster:
+        ca: <ca-cert>
+      name: security-cluster
+    users:
+    - name: security-cluster
+      user:
+    contexts:
+    - context:
+        cluster: security-cluster
+        user: security-cluster
+      name: security-cluster
+    current-context: security-cluster
