--- a/helm-charts/istio-cacerts/templates/secret.yaml
+++ b/helm-charts/istio-cacerts/templates/secret.yaml
@@ -1,28 +1,13 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cacerts-delete
+  name: cacerts
   annotations:
-    avp.kubernetes.io/path: sahap2-kv/data/bwb-dev/cacerts
+    avp.kubernetes.io/path: paas2-kv/data/{{ .Values.certsPath }}/cacerts
     # avp.kubernetes.io/kv-version: 2
 type: Opaque
-stringData:
-  east-cluster: |
-    apiVersion: v1
-    kind: Config
-    preferences: {}
-    clusters:
-    - cluster:
-        ca-cert.pem: <ca-cert>
-        server: <server>
-      name: security-cluster
-    users:
-    - name: security-cluster
-      user:
-        token: <sa-token>
-    contexts:
-    - context:
-        cluster: security-cluster
-        user: security-cluster
-      name: security-cluster
-    current-context: security-cluster     
+data:
+  ca-cert.pem: <ca-cert>
+  ca-key.pem: <ca-key>  
+  cert-chain.pem: <cert-chain>
+  root-cert.pem: <root-cert>      
