remote secret added

--- a/helm-charts/clusters/bwb/templates/secret.yaml
+++ b/helm-charts/clusters/bwb/templates/secret.yaml
@@ -6,21 +6,22 @@ metadata:
     avp.kubernetes.io/path: sahap2-kv/data/bwb-dev/cacerts
     # avp.kubernetes.io/kv-version: 2
 type: Opaque
-stringData:
-  east-cluster: |
-    apiVersion: v1
-    kind: Config
-    preferences: {}
-    clusters:
-    - cluster:
-        ca: <ca-cert>
-      name: security-cluster
-    users:
-    - name: security-cluster
-      user:
-    contexts:
-    - context:
-        cluster: security-cluster
-        user: security-cluster
-      name: security-cluster
-    current-context: security-cluster
+data:
+  ca: <ca-cert>
+  # east-cluster: |
+  #   apiVersion: v1
+  #   kind: Config
+  #   preferences: {}
+  #   clusters:
+  #   - cluster:
+  #       ca: <ca-cert>
+  #     name: security-cluster
+  #   users:
+  #   - name: security-cluster
+  #     user:
+  #   contexts:
+  #   - context:
+  #       cluster: security-cluster
+  #       user: security-cluster
+  #     name: security-cluster
+  #   current-context: security-cluster
