--- a/helm-charts/clusters/bwb/templates/secret.yaml
+++ b/helm-charts/clusters/bwb/templates/secret.yaml
@@ -7,21 +7,7 @@ metadata:
     # avp.kubernetes.io/kv-version: 2
 type: Opaque
 data:
-  ca: <ca-cert>
-  # east-cluster: |
-  #   apiVersion: v1
-  #   kind: Config
-  #   preferences: {}
-  #   clusters:
-  #   - cluster:
-  #       ca: <ca-cert>
-  #     name: security-cluster
-  #   users:
-  #   - name: security-cluster
-  #     user:
-  #   contexts:
-  #   - context:
-  #       cluster: security-cluster
-  #       user: security-cluster
-  #     name: security-cluster
-  #   current-context: security-cluster
+  ca-cert.pem: <ca-cert>
+  ca-key.pem: <ca-key>  
+  cert-chain.pem: <cert-chain>
+  root-cert.pem: <root-cert>    
