--- a/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-access-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   annotations:
     networking.istio.io/cluster: security
-    avp.kubernetes.io/path: sahap2-kv/data/shared/{.Values.global.clusterName }}-{{ .Values.global.env}}    
+    avp.kubernetes.io/path: sahap2-kv/data/shared/{{ .Values.global.clusterName }}-{{ .Values.global.env}}    
   labels:
     istio/multiCluster: "true"
   name: istio-remote-secret-security-cluster
