remote secret check done

--- a/helm-charts/clusters/bwb/templates/securiy-cluster-remote-secret.yaml
+++ b/helm-charts/clusters/bwb/templates/securiy-cluster-remote-secret.yaml
@@ -6,10 +6,10 @@ metadata:
     avp.kubernetes.io/path: sahap2-kv/data/shared/{{ .Values.global.clusterName }}-{{ .Values.global.env}}    
   labels:
     istio/multiCluster: "true"
-  name: istio-remote-secret-security-cluster
+  name: security-cluster-remote-secret
   namespace: istio-system
 stringData:
-  east-cluster: |
+  security-cluster: |
     apiVersion: v1
     kind: Config
     preferences: {}
