--- a/helm-charts/clusters/security/operator/Chart.yaml
+++ b/helm-charts/clusters/security/operator/Chart.yaml
@@ -7,4 +7,4 @@ appVersion: 1.0.0
 dependencies:
 - name: istio-cluster-base
   version: "1.0.0"
-  repository: "file://../base"
+  repository: "file://../../base"
