k8s api server egress rule try

--- a/helm-charts/clusters/security/operator/templates/sidecar-allow-k8sapi-server.yaml
+++ b/helm-charts/clusters/security/operator/templates/sidecar-allow-k8sapi-server.yaml
@@ -5,6 +5,5 @@ metadata:
   namespace: istio-system
 spec:
   egress:
-  - port:
-      number: 8443
-    bind: 192.168.99.106
+  - hosts:
+    - "192.168.99.106"    
