--- a/helm-charts/istio-cacerts/templates/secret.yaml
+++ b/helm-charts/istio-cacerts/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cacerts
   annotations:
-    avp.kubernetes.io/path: sahap2-kv/data/{{ .Values.certsPath }}/cacerts
+    avp.kubernetes.io/path: sahab2-kv/data/{{ .Values.certsPath }}/cacerts
     # avp.kubernetes.io/kv-version: 2
 type: Opaque
 data:
