bwb dev cluster cross-cluster workload discovery

--- a/helm-charts/clusters/bwb/operator/templates/security-cluster-remote-secret.yaml
+++ b/helm-charts/clusters/bwb/operator/templates/security-cluster-remote-secret.yaml
@@ -3,13 +3,13 @@ kind: Secret
 metadata:
   annotations:
     networking.istio.io/cluster: security
-    avp.kubernetes.io/path: sahab2-kv/data/shared/{{ .Values.global.clusterName }}-{{ .Values.global.env}}    
+    avp.kubernetes.io/path: sahab2-kv/data/shared/security-dev    
   labels:
     istio/multiCluster: "true"
   name: security-cluster-remote-secret
   namespace: istio-system
 stringData:
-  security-cluster: |
+  security: |
     apiVersion: v1
     kind: Config
     preferences: {}
@@ -17,14 +17,14 @@ stringData:
     - cluster:
         certificate-authority-data: <certificate-authority-data>
         server: <server>
-      name: security-cluster
+      name: security
     users:
-    - name: security-cluster
+    - name: security
       user:
         token: <sa-token>
     contexts:
     - context:
-        cluster: security-cluster
-        user: security-cluster
-      name: security-cluster
-    current-context: security-cluster
+        cluster: security
+        user: security
+      name: security
+    current-context: security
