--- a/helm-charts/clusters/bwb/remote-secret/templates/security-cluster-remote-secret.yaml
+++ b/helm-charts/clusters/bwb/remote-secret/templates/security-cluster-remote-secret.yaml
@@ -4,6 +4,7 @@ kind: Secret
 metadata:
   annotations:
     networking.istio.io/cluster: security
+    avp.kubernetes.io/path: sahab2-kv/data/shared/security-dev      
   labels:
     istio/multiCluster: "true"
   name: istio-remote-secret-security
@@ -28,4 +29,3 @@ stringData:
     - name: security
       user:
         token: <sa-token>
----
