--- a/helm-charts/clusters/base/templates/gateway.yaml
+++ b/helm-charts/clusters/base/templates/gateway.yaml
@@ -8,7 +8,13 @@ spec:
   servers:
   - port:
       number: 443
-      name: http
+      name: http-443
       protocol: HTTP
+    hosts:
+    - "*"      
+  - port:
+      number: 80
+      name: http-80
+      protocol: HTTP      
     hosts:
     - "*"
